--- a/public/products.html
+++ b/public/products.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Products Page - Dashboard Template</title>
+    <title>Charts Page - Dashboard Template</title>
     <!--
 
     Template 2108 Dashboard
@@ -30,7 +30,7 @@
                     <nav class="navbar navbar-expand-xl navbar-light bg-light">
                         <a class="navbar-brand" href="index.html">
                             <i class="fas fa-3x fa-tachometer-alt tm-site-icon"></i>
-                            <h1 class="tm-site-title mb-0">Dashboard</h1>
+                            <h1 class="tm-site-title mb-0">Chart Space</h1>
                         </a>
                         <button class="navbar-toggler ml-auto mr-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
                                     </div>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="products.html">Products</a>
+                                    <a class="nav-link" href="products.html">Charts</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -92,11 +92,11 @@
                     <div class="bg-white tm-block h-100">
                         <div class="row">
                             <div class="col-md-8 col-sm-12">
-                                <h2 class="tm-block-title d-inline-block">Products</h2>
+                                <h2 class="tm-block-title d-inline-block">Charts</h2>
 
                             </div>
                             <div class="col-md-4 col-sm-12 text-right">
-                                <a href="add-product.html" class="btn btn-small btn-primary">Add New Product</a>
+                                <a href="add-product.html" class="btn btn-small btn-primary">Add New Chart</a>
                             </div>
                         </div>
                         <div class="table-responsive">
@@ -104,10 +104,10 @@
                                 <thead>
                                     <tr class="tm-bg-gray">
                                         <th scope="col">&nbsp;</th>
-                                        <th scope="col">Product Name</th>
-                                        <th scope="col" class="text-center">Units Sold</th>
-                                        <th scope="col" class="text-center">In Stock</th>
-                                        <th scope="col">Expire Date</th>
+                                        <th scope="col">Chart Name</th>
+                                        <th scope="col" class="text-center">Category</th>
+                                        <th scope="col" class="text-center">&nbsp</th>
+                                        <th scope="col">Date Created</th>
                                         <th scope="col">&nbsp;</th>
                                     </tr>
                                 </thead>
