--- a/public/add-product.html
+++ b/public/add-product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Product - Dashboard Admin Template</title>
+    <title>Add Chart - Dashboard Admin Template</title>
     <!--
 
     Template 2108 Dashboard
@@ -31,7 +31,7 @@
                 <nav class="navbar navbar-expand-xl navbar-light bg-light">
                     <a class="navbar-brand" href="index.html">
                         <i class="fas fa-3x fa-tachometer-alt tm-site-icon"></i>
-                        <h1 class="tm-site-title mb-0">Dashboard</h1>
+                        <h1 class="tm-site-title mb-0">Chart Space</h1>
                     </a>
                     <button class="navbar-toggler ml-auto mr-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
                                 </div>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="products.html">Products</a>
+                                <a class="nav-link" href="products.html">Charts</a>
                             </li>
 
                             <li class="nav-item">
@@ -100,8 +100,8 @@
                         <div class="col-xl-7 col-lg-7 col-md-12">
                             <form action="" class="tm-edit-product-form">
                                 <div class="input-group mb-3">
-                                    <label for="name" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Product
-                                        Name
+                                    <label for="name" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Chart Name
+                                        
                                     </label>
                                     <input id="name" name="name" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
                                 </div>
@@ -119,18 +119,18 @@
                                     </select>
                                 </div>
                                 <div class="input-group mb-3">
-                                    <label for="expire_date" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Expire
+                                    <!-- <label for="expire_date" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Expire
                                         Date
                                     </label>
                                     <input id="expire_date" name="expire_date" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
                                         data-large-mode="true">
                                 </div>
-                                <div class="input-group mb-3">
+                               <div class="input-group mb-3">
                                     <label for="stock" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Units In
                                         Stock
                                     </label>
                                     <input id="stock" name="stock" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-7 col-sm-7">
-                                </div>
+                                </div> -->
                                 <div class="input-group mb-3">
                                     <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
                                         <button type="submit" class="btn btn-primary">Add
