--- a/public/edit-product.html
+++ b/public/edit-product.html
@@ -31,7 +31,7 @@
                 <nav class="navbar navbar-expand-xl navbar-light bg-light">
                     <a class="navbar-brand" href="index.html">
                         <i class="fas fa-3x fa-tachometer-alt tm-site-icon"></i>
-                        <h1 class="tm-site-title mb-0">Dashboard</h1>
+                        <h1 class="tm-site-title mb-0">Chart Space</h1>
                     </a>
                     <button class="navbar-toggler ml-auto mr-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
                                 </div>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="products.html">Products</a>
+                                <a class="nav-link" href="products.html">Charts</a>
                             </li>
 
                             <li class="nav-item">
