--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body id="reportsPage">
+    <div id="app"></div>
     <div class="" id="home">
         <div class="container">
             <div class="row">
