fix: webpack build

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Быстрый запуск Webpack</title>
   </head>
   <body>
-    <p>Файл создан плагином html-webpack-plugin</p>
+    <span class="test">
+      Hello!
+    </span>
   </body>
 </html>
