--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
     <span class="test">
       Hello!
     </span>
+    <button class="btn btn-primary w-100 py-2" type="submit">Sign Out</button>
   </body>
 </html>
