fix: rename sign-in/sign-up pages, add sign-out

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <span class="test">
       Hello!
     </span>
-    <button class="btn btn-primary w-100 py-2" type="submit">Sign Out</button>
+    <button class="btn btn-primary w-100 py-2" id="signOutButton">
+      Sign Out
+    </button>
   </body>
 </html>
