--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>All good</title>
+    <title>All good!</title>
   </head>
   <body>
     <span class="test">
