fix: add error handling

--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -7,6 +7,7 @@
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
   <main class="form-signin w-100 m-auto">
     <form id="signInForm">
+      <div id="errorContainer"></div>
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
       <div class="form-floating">
         <input type="email" class="form-control" id="userEmail" placeholder="name@example.com">
