--- a/src/add-chart.html
+++ b/src/add-chart.html
@@ -15,13 +15,13 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <!-- https://fonts.google.com/specimen/Open+Sans -->
-    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="/src/scss/fontawesome.min.css">
     <!-- https://fontawesome.com/ -->
     <link rel="stylesheet" href="jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
     <!-- http://api.jqueryui.com/datepicker/ -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/src/scss/bootstrap.min.css">
     <!-- https://getbootstrap.com/ -->
-    <link rel="stylesheet" href="css/tooplate.css">
+    <link rel="stylesheet" href="/src/scss/tooplate.css">
 </head>
 
 <body class="bg02">
@@ -57,7 +57,7 @@
                                 </div>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="products.html">Charts</a>
+                                <a class="nav-link" href="charts.html">Charts</a>
                             </li>
 
                             <li class="nav-item">
@@ -77,7 +77,7 @@
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link d-flex" href="login.html">
+                                <a class="nav-link d-flex" href="sign-up.html">
                                     <i class="far fa-user mr-2 tm-logout-icon"></i>
                                     <span>Logout</span>
                                 </a>
@@ -93,7 +93,7 @@
                 <div class="bg-white tm-block">
                     <div class="row">
                         <div class="col-12">
-                            <h2 class="tm-block-title d-inline-block">Add Product</h2>
+                            <h2 class="tm-block-title d-inline-block">Add Chart</h2>
                         </div>
                     </div>
                     <div class="row mt-4 tm-edit-product-row">
@@ -118,20 +118,7 @@
                                         <option value="3">Sed feugiat nulla</option>
                                     </select>
                                 </div>
-                                <div class="input-group mb-3">
-                                    <!-- <label for="expire_date" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Expire
-                                        Date
-                                    </label>
-                                    <input id="expire_date" name="expire_date" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
-                                        data-large-mode="true">
-                                </div>
-                               <div class="input-group mb-3">
-                                    <label for="stock" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Units In
-                                        Stock
-                                    </label>
-                                    <input id="stock" name="stock" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-7 col-sm-7">
-                                </div> -->
-                                <div class="input-group mb-3">
+                                  <div class="input-group mb-3">
                                     <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
                                         <button type="submit" class="btn btn-primary">Add
                                         </button>
