--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,225 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>All good!</title>
-  </head>
-  <body>
-    <span class="test">
-      Hello!
-    </span>
-    <button class="btn btn-primary w-100 py-2" id="signOutButton">
-      Sign Out
-    </button>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Home</title>
+    <!--
+
+    Template 2108 Dashboard
+
+	http://www.tooplate.com/view/2108-dashboard
+
+    -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
+    <!-- https://fonts.google.com/specimen/Open+Sans -->
+    <link rel="stylesheet" href="/src/scss/fontawesome.min.css">
+    <!-- https://fontawesome.com/ -->
+    <link rel="stylesheet" href="/src/scss/fullcalendar.min.css">
+    <!-- https://fullcalendar.io/ -->
+    <link rel="stylesheet" href="/src/scss/bootstrap.min.css">
+    <!-- https://getbootstrap.com/ -->
+    <link rel="stylesheet" href="/src/scss/tooplate.css">
+</head>
+
+<body id="reportsPage">
+    <div id="app"></div>
+    <div class="" id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <nav class="navbar navbar-expand-xl navbar-light bg-light">
+                        <a class="navbar-brand" href="#">
+                            <i class="fas fa-3x fa-tachometer-alt tm-site-icon"></i>
+                            <h1 class="tm-site-title mb-0">Chart Space</h1>
+                        </a>
+                        <button class="navbar-toggler ml-auto mr-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mx-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#">Dashboard
+                                        <span class="sr-only">(current)</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="charts.html">Charts</a>
+                                </li>
+
+                               <!-- <li class="nav-item">
+                                    <a class="nav-link" href="accounts.html">Accounts</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                        aria-expanded="false">
+                                        Settings
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" href="#">Profile</a>
+                                        <a class="dropdown-item" href="#">Billing</a>
+                                        <a class="dropdown-item" href="#">Customize</a>
+                                    </div>
+                                </li>-->
+                            </ul>
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link d-flex" href="sign-in.html">
+                                        <i class="far fa-user mr-2 tm-logout-icon"></i>
+                                        <span>Logout</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+            <!-- row -->
+            <div class="row tm-content-row tm-mt-big">
+                <div class="tm-col tm-col-big">
+                    <div class="bg-white tm-block h-100">
+                        <h2 class="tm-block-title">Hit Line Charts</h2>
+                        <canvas id="lineChart"></canvas>
+                    </div>
+                </div>
+                <div class="tm-col tm-col-big">
+                    <div class="bg-white tm-block h-100">
+                        <h2 class="tm-block-title">Histograms</h2>
+                        <canvas id="barChart"></canvas>
+                    </div>
+                </div>
+                <div class="tm-col tm-col-small">                 
+                    <div class="bg-white tm-block h-100">
+                        <canvas id="pieChart" class="chartjs-render-monitor"></canvas>
+                         <!-- <h2 class="tm-block-title">Pie Charts</h2>-->
+                    </div>
+                </div>
+
+                <div class="tm-col tm-col-big">
+                    <div class="bg-white tm-block h-100">
+                        <div class="row">
+                            <div class="col-8">
+                                <h2 class="tm-block-title d-inline-block">Top Chart List</h2>
+
+                            </div>
+                            <div class="col-4 text-right">
+                                <a href="charts.html" class="tm-link-black">View All</a>
+                            </div>
+                        </div>
+                        <ol class="tm-list-group tm-list-group-alternate-color tm-list-group-pad-big">
+                            <li class="tm-list-group-item">
+                                Donec eget libero
+                            </li>
+                            <li class="tm-list-group-item">
+                                Nunc luctus suscipit elementum
+                            </li>
+                            <li class="tm-list-group-item">
+                                Maecenas eu justo maximus
+                            </li>
+                            <li class="tm-list-group-item">
+                                Pellentesque auctor urna nunc
+                            </li>
+                            <li class="tm-list-group-item">
+                                Sit amet aliquam lorem efficitur
+                            </li>
+                            <li class="tm-list-group-item">
+                                Pellentesque auctor urna nunc
+                            </li>
+                            <li class="tm-list-group-item">
+                                Sit amet aliquam lorem efficitur
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+               <!-- <div class="tm-col tm-col-big">
+                    <div class="bg-white tm-block h-100">
+                        <h2 class="tm-block-title">Calendar</h2>
+                        <div id="calendar"></div>
+                        <div class="row mt-4">
+                            <div class="col-12 text-right">
+                                <a href="#" class="tm-link-black">View Schedules</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="tm-col tm-col-small">
+                    <div class="bg-white tm-block h-100">
+                        <h2 class="tm-block-title">Upcoming Tasks</h2>
+                        <ol class="tm-list-group">
+                            <li class="tm-list-group-item">List of tasks</li>
+                            <li class="tm-list-group-item">Lorem ipsum doloe</li>
+                            <li class="tm-list-group-item">Read reports</li>
+                            <li class="tm-list-group-item">Write email</li>
+                            
+                            <li class="tm-list-group-item">Call customers</li>
+                            <li class="tm-list-group-item">Go to meeting</li>
+                            <li class="tm-list-group-item">Weekly plan</li>
+                            <li class="tm-list-group-item">Ask for feedback</li>
+                            
+                            <li class="tm-list-group-item">Meet Supervisor</li>
+                            <li class="tm-list-group-item">Company trip</li>
+                        </ol>
+                    </div>
+                </div>-->
+            </div>
+            <button class="btn btn-primary w-100 py-2" id="signOutButton">
+              Sign Out
+            </button>
+            <footer class="row tm-mt-small">
+                <div class="col-12 font-weight-light">
+                    <p class="d-inline-block tm-bg-black text-white py-2 px-4">
+                        Copyright &copy; 2018 Admin Dashboard . Created by
+                        <a rel="nofollow" href="https://www.tooplate.com" class="text-white tm-footer-link">Tooplate</a>
+                    </p>
+                </div>
+            </footer>
+        </div>
+    </div>
+    <script src="/src/js/ui/jquery-3.3.1.min.js"></script>
+    <!-- https://jquery.com/download/ -->
+    <script src="/src/js/ui/moment.min.js"></script>
+    <!-- https://momentjs.com/ -->
+    <script src="/src/js/ui/utils.js"></script>
+    <script src="/src/js/ui/Chart.min.js"></script>
+    <!-- https://fullcalendar.io/ -->
+    <script src="/src/js/ui/bootstrap.min.js"></script>
+    <!-- https://getbootstrap.com/ -->
+    <script src="/src/js/ui/tooplate-scripts.js"></script>
+    <script>
+        let ctxLine,
+            ctxBar,
+            ctxPie,
+            optionsLine,
+            optionsBar,
+            optionsPie,
+            configLine,
+            configBar,
+            configPie,
+            lineChart;
+        barChart, pieChart;
+        // DOM is ready
+        $(function () {
+            updateChartOptions();
+            drawLineChart(); // Line Chart
+            drawBarChart(); // Bar Chart
+            drawPieChart(); // Pie Chart
+            drawCalendar(); // Calendar
+
+            $(window).resize(function () {
+                updateChartOptions();
+                updateLineChart();
+                updateBarChart();
+                reloadPage();
+            });
+        })
+    </script>
+
+
+
+
   </body>
 </html>
