--- a/src/add-chart.html
+++ b/src/add-chart.html
@@ -31,7 +31,7 @@
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                <a class="nav-link dropdown-toggle" href="index.html" role="button" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false">
                                     Reports
                                 </a>
@@ -49,7 +49,7 @@
                                 <a class="nav-link" href="accounts.html">Accounts</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false">
                                     Settings
                                 </a>
@@ -83,30 +83,29 @@
                     </div>
                     <div class="row mt-4 tm-edit-product-row">
                         <div class="col-xl-7 col-lg-7 col-md-12">
-                            <form action="" class="tm-edit-product-form">
+                            <form class="tm-edit-product-form" id="addChartForm">
                                 <div class="input-group mb-3">
-                                    <label for="name" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Chart Name
+                                    <label for="chartName" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Chart Name
                                         
                                     </label>
-                                    <input id="name" name="name" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                    <input id="chartName" required name="name" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
                                 </div>
                                 <div class="input-group mb-3">
-                                    <label for="description" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 mb-2">Description</label>
-                                    <textarea class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" rows="3" required></textarea>
+                                    <label for="chartDescription" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 mb-2">Description</label>
+                                    <textarea class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" rows="3" required id="chartDescription"></textarea>
                                 </div>
                                 <div class="input-group mb-3">
-                                    <label for="category" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Category</label>
-                                    <select class="custom-select col-xl-9 col-lg-8 col-md-8 col-sm-7" id="category">
+                                    <label for="chartType" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Chart type</label>
+                                    <select class="custom-select col-xl-9 col-lg-8 col-md-8 col-sm-7" id="chartType" required>
                                         <option selected>Select one</option>
-                                        <option value="1">Cras efficitur lacus</option>
-                                        <option value="2">Pellentesque molestie</option>
-                                        <option value="3">Sed feugiat nulla</option>
+                                        <option value="Chart type 1">Chart type 1</option>
+                                        <option value="Chart type 2">Chart type 2</option>
+                                        <option value="Chart type 3">Chart type 3</option>
                                     </select>
                                 </div>
                                   <div class="input-group mb-3">
                                     <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
-                                        <button type="submit" class="btn btn-primary">Add
-                                        </button>
+                                        <button type="submit" class="btn btn-primary">Add</button>
                                     </div>
                                 </div>
                             </form>
@@ -134,18 +133,6 @@
             </div>
         </footer>
     </div>
-
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- https://jquery.com/download/ -->
-    <script src="jquery-ui-datepicker/jquery-ui.min.js"></script>
-    <!-- https://jqueryui.com/download/ -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- https://getbootstrap.com/ -->
-    <script>
-        $(function () {
-            $('#expire_date').datepicker();
-        });
-    </script>
 </body>
 
 </html>
