--- a/src/add-chart.html
+++ b/src/add-chart.html
@@ -111,13 +111,9 @@
                             </form>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-12 mx-auto mb-4">
-                            <div class="tm-product-img-dummy mx-auto">
-                                <i class="fas fa-5x fa-cloud-upload-alt" onclick="document.getElementById('fileInput').click();"></i>
-                            </div>
                             <div class="custom-file mt-3 mb-3">
-                                <input id="fileInput" type="file" style="display:none;" />
-                                <input type="button" class="btn btn-primary d-block mx-auto" value="Upload ..." onclick="document.getElementById('fileInput').click();"
-                                />
+                                <input id="csvFile" type="file" style="display:none;" accept='text/csv, text/plain, .csv' />
+                                <input type="button" class="btn btn-primary d-block mx-auto" value="Upload CSV..." onclick="document.getElementById('csvFile').click();" />
                             </div>
                         </div>
                     </div>
