--- a/src/charts.html
+++ b/src/charts.html
@@ -36,7 +36,7 @@
                           </ul>
                           <ul class="navbar-nav">
                               <li class="nav-item">
-                                  <a class="nav-link d-flex" href="sign-in.html">
+                                  <a class="nav-link d-flex" href="#" id="signOutButton">
                                       <i class="far fa-user mr-2 tm-logout-icon"></i>
                                       <span>Logout</span>
                                   </a>
