fix: add bar chart

--- a/src/chart.html
+++ b/src/chart.html
@@ -57,6 +57,9 @@
           </div>
           <div class="table-responsive">
             <div id="chartContent"></div>
+            <div>
+              <canvas id="chart"></canvas>
+            </div>
           </div>
         </div>
       </div>
