--- a/src/add-chart.html
+++ b/src/add-chart.html
@@ -97,10 +97,9 @@
                                 <div class="input-group mb-3">
                                     <label for="chartType" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Chart type</label>
                                     <select class="custom-select col-xl-9 col-lg-8 col-md-8 col-sm-7" id="chartType" required>
-                                        <option selected>Select one</option>
-                                        <option value="Chart type 1">Chart type 1</option>
-                                        <option value="Chart type 2">Chart type 2</option>
-                                        <option value="Chart type 3">Chart type 3</option>
+                                        <option value="BarChart">Bar Chart</option>
+                                        <option value="HistogramChart">Histogram Chart</option>
+                                        <option value="PieChart">Pie Chart</option>
                                     </select>
                                 </div>
                                   <div class="input-group mb-3">
