--- a/src/chart.html
+++ b/src/chart.html
@@ -64,14 +64,7 @@
         </div>
       </div>
     </div>
-    <footer class="row tm-mt-small">
-      <div class="col-12 font-weight-light">
-        <p class="d-inline-block tm-bg-black text-white py-2 px-4">
-          Copyright &copy; 2018 Admin Dashboard . Created by
-          <a rel="nofollow" href="https://www.tooplate.com" class="text-white tm-footer-link">Tooplate</a>
-        </p>
-      </div>
-    </footer>
+    <footer class="row tm-mt-small"></footer>
   </div>
 </div>
 </body>
