home page css update

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,8 @@
                 </nav>
             </div>
         </div>
-
+        <div class="hist-home">
+        </div>
         <footer class="row tm-mt-small"></footer>
     </div>
 </div>
